<resources>
    <string name="app_name">ShamsutOFFsCalculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_equals">=</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">x</string>
    <string name="_divide">/</string>
    <string name="_percent">%</string>
    <string name="_deleteLast">d</string>
    <string name="_ac">c</string>
    <string name="defult_textView_text">0</string>
    <string name="settings_text">Настройте цвет кнопок:</string>
    <string name="Yellow">Желтый</string>
    <string name="Green">Зеленый</string>
    <string name="Blue">Синий</string>
    <string name="Red">Красный</string>
    <string name="ok">ок</string>
</resources>