<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guideline0.25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guideline0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guideline0.75"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/button_ac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_ac"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.25"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textSize="@dimen/button_text"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@id/button_ac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_deleteLast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_deleteLast"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.5"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_percent"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.75"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_divide"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/Guideline0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.25"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.5"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.75"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_multiply"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/Guideline0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.25"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.5"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.75"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_minus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/Guideline0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.25"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.5"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.75"
        app:layout_constraintStart_toEndOf="@+id/Guideline0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_plus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/Guideline0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_point"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Guideline0.75"
        app:layout_constraintStart_toStartOf="@id/Guideline0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:insetBottom="6dp"
        android:text="@string/_equals"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/Guideline0.75"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>